[package]
name = "rust-game-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "macroquad-render" ]
macroquad-render = [ "macroquad", "egui-macroquad" ]

[dependencies]
glam = "0"

macroquad = { version = "0.3", optional = true }
egui-macroquad = { version = "0.15", optional = true }

[dev-dependencies]
rand = "0.8"
hashbrown = "0.13"
