[package]
name = "rust-game-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "macroquad-render" ]
macroquad-render = [ "macroquad", "egui-macroquad" ]

[dependencies]
rand = "0.8"
glam = "0"
bitvec = "1.0"

macroquad = { version = "0.3", optional = true }
egui-macroquad = { version = "0.15", optional = true }

rune = { git = "https://github.com/therealbnut/rune.git", default_features = false, feautes = [ "byte-code" ] }
bincode = { version = "1.3", default_features = false }

[dev-dependencies]
hashbrown = "0.13"
